--- a/user/templates/user/password_verify_otp.html
+++ b/user/templates/user/password_verify_otp.html
@@ -34,15 +34,15 @@
 
         .header {
             display: flex; 
-            align-items: center; 
+            align-items: left; 
             justify-content: left; 
             margin-bottom: 20px;
             border-bottom: 2px solid darkgreen; 
-            padding-bottom: 10px; 
+            padding-bottom: 8px; 
         }
         
         .header h2 {
-            font-size: 1.8em;
+            font-size: 25px;
             margin: 0;
             color: darkgreen;
             justify-content: left;
@@ -56,12 +56,12 @@
         input[type="text"] {
             width: 100%;
             padding: 12px;
-            border: 1px solid #ddd;
+            border: 1px solid #a7a3a3;
             border-radius: 5px;
             margin-bottom: 15px;
             box-sizing: border-box; 
             text-align: center;
-            font-size: 1.2em;
+            font-size: 15px;
         }
 
         .verify-btn {
@@ -145,7 +145,7 @@
             
             <form method="post" novalidate onsubmit="return validateForm()">
                 {% csrf_token %}
-                <input type="text" id="otp" name="otp" placeholder="Enter OTP">
+                <input type="text" id="otp" name="otp" placeholder="Enter OTP" max_length="6" required>
                 <button type="submit" class="verify-btn">Verify</button>
             </form>
 
