--- a/user/templates/user/forget_password_request.html
+++ b/user/templates/user/forget_password_request.html
@@ -75,7 +75,7 @@
 </head>
 <body>
     <div class="form-container">
-        <h2>Forgot Password</h2>
+        <h2>Forget Password</h2>
         <form method="post">
             {% csrf_token %}
             <input type="email" id="email" name="email" placeholder="Enter your email" required>
